test/conformance/chainsaw/generating-policies/matchconditions/cel-libs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matchcondition-with-cel-libs
