test/conformance/chainsaw/generating-policies/matchconditions/cel-libs/triggers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: matchcondition-with-cel-libs
spec:
  containers:
  - name: container01
    image: corp.reg.com/busybox:1.35
    securityContext:
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: matchcondition-with-cel-libs
spec:
  containers:
  - name: container01
    image: busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
